# EventBuilder

./: .gitignore  BuildMe.sh  CMakeLists.txt  Do.sh  DoTheWorkForMe.sh  INSTALL.txt  Plot.cpp  README.txt  REGRESSION.txt  mybashfile.sh
Analysis/: Analysis.cc  CMakeLists.txt
Analysis/include/: Analysis.h  TestedPlan.h
Analysis/src/: Analysis.cc  HitsInPlan.cc  TrackFitter.cc
Common/: CMakeLists.txt  TryToRemoveThis.h
Common/Geometry/: Geometry.cc
Common/Geometry/include/: Dif.h  Geometry.h
Common/Geometry/src/: Geometry.cc
Common/Reader/: TXTReader.cc
Common/Reader/include/: Reader.h  TXTReader.h
Common/Reader/src/: ReaderFactory.cc  TXTReader.cc  XMLReader.cc
Common/TimeHit/include/: RawCalorimeterTime.h  RawCalorimeterTimeImpl.h
Common/TimeHit/src/: RawCalorimeterTimeImpl.cc
Common/include/: Progress.h  Types.h  Utilities.h
Database/: CMakeLists.txt
Database/include/: ILCConfDB.h
Database/src/configObjects/: AsicConfiguration.cc  ConfigObject.cc  Configuration.cc  Setup.cc  State.cc
Database/src/daq/: Daq.cc  RunInfo.cc
Database/src/db/: DBConnection.cc  DBInit.cc
DetectorGeometry/: Aout.xml  Aout2.xml  Decembre (copie).xml  Decembre.xml  Dome.xml  GIF++2.xml  M3.xml  Tomuvol.xml
Elog/: CMakeLists.txt
Elog/src/: ElogFiller.cc
Geometry/: CMakeLists.txt
Geometry/include/: Geometry.h
Geometry/src/: Geometry.cc
Noise/: CMakeLists.txt
Noise/include/: Noise.h
Noise/src/: Noise.cc
Reader/: CMakeLists.txt
Reader/include/: Config.h  Reader.h  ReaderFactory.h  XMLReaderElog.h
Reader/src/: XMLReader.cc  XMLReaderConfig.cc  XMLReaderElog.cc
StreamOut/: CMakeLists.txt  DIFUnpacker.cc  SDHCAL_RawData_Processor.cc
StreamOut/include/: SDHCAL_RawData_Processor.h
StreamOut/src/: DIFSlowControl.cc  DIFUnpacker.cc  SDHCAL_RawData_Processor.cc
Streamout/: CMakeLists.txt
Streamout/include/: Streamout.h
Streamout/src/: Streamout.cc
Trivent/: CMakeLists.txt  TriventProcessor.cc
Trivent/include/: HistoPlane.h  SpillStudy.h  TriventProcessor.h
Trivent/src/: HistoPlane.cc  TriventProcessor.cc
include/Analysis/: Analysis.h
include/Geometry/: Geometry.h
include/Noise/: Noise.h
include/Reader/: Reader.h  XMLReader.h
include/Streamout/: DIFSlowControl.h  DIFUnpacker.h  SDHCAL_RawData_Processor.h
include/Trivent/: TriventProcessor.h
lcio/: CMakeLists.txt
marlino/: CMakeLists.txt
marlino/include/: EventSelector.h  Global.h  Intro.h  MarlinoConfig.h  Processor.h  ProcessorMgr.h  VerbosityLevels.h  logbuffer.h  loglevels.h  logscope.h  logstream.h
marlino/include/cmake/: Version.h
marlino/src/: EventSelector.cc  Global.cc  LCIOOutputProcessor.cc  LogicalExpressions.cc  Marlino.cc  Processor.cc  ProcessorLoader.cc  ProcessorMgr.cc  ProcessorParameter.cc  StringParameters.cc  XMLParser.cc  logstream.cc  prefix.cc
source/: CMakeLists.txt
source/include/: HaveOCCI.h.in  Intro.h  Progress.h  Types.h  Utilities.h  Version.h.in
source/include/Analysis/: Analysis.h  GeometryPlan.h  HitsInPlan.h  TestedPlan.h
source/include/Config/: Config.h
source/include/Geometry/: Dif.h  Geometry.h  Plate.h
source/include/HistoHandler/: HistoHandler.h
source/include/Reader/: Reader.h  TXTReader.h  XMLReader.h  XMLReaderConfig.h  XMLReaderElog.h
source/include/Streamout/: BufferNavigator.h  DIFSlowControl.h  DIFUnpacker.h  LMGenericObject.h  SDHCAL_RawData_Processor.h  Streamout.h
source/include/Trivent/: HistoPlane.h  SpillStudy.h  TriventProcessor.h
source/include/tinyxml/: tinystr.h  tinyxml.h
source/src/Analysis/: Analysis.cc
source/src/Common/Geometry/: Geometry.cc
source/src/Common/Reader/: ReaderFactory.cc  TXTReader.cc  XMLReader.cc  XMLReaderConfig.cc  XMLReaderElog.cc
source/src/Database/Exceptions/: Exception.cc
source/src/Database/configObjects/: Asic.cc  AsicConfiguration.cc  ConfigObject.cc  Configuration.cc  DBField.cc  Dcc.cc  DccConfiguration.cc  Dif.cc  DifConfiguration.cc  Lda.cc  LdaConfiguration.cc  Setup.cc  State.cc  Version.cc
source/src/Database/daq/: Daq.cc  Job.cc  RunInfo.cc
source/src/Database/db/: DBConnection.cc  DBInit.cc  DBValue.cc  IntVal.cc  IntVectorVal.cc  StringVal.cc
source/src/ElogFiller/: ElogFiller.cc  postlog.py
source/src/HistoHandler/: HistoHandler.cc
source/src/Noise/: Noise.cc
source/src/Plot/: Plot.cpp
source/src/RunHeaderTest/: RunHeaderTest.cc
source/src/StreamOut/: BufferNavigator.cc  DIFSlowControl.cc  DIFUnpacker.cc  SDHCAL_RawData_Processor.cc  Streamout.cc
source/src/Trivent/: HistoPlane.cc  TriventProcessor.cc
source/src/tinyxml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
test/: CMakeLists.txt
test/src/: main.cpp
testData/: SPS_2015_CMS_DHCAL_728753_I0_0_4readouts.slcio  SPS_Dec2014_DHCAL_726353_I0_0_1event.slcio  SPS_May2012_DHCAL_714402_I0_0_3events.slcio
tinyxml/: CMakeLists.txt
tinyxml/include/: tinyxml.h
tinyxml/src/: tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
xml/: Analysis.xml  Noise.xml  Streamout.xml  Trivent.xml  streamout.xml
